修改类库名

--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TwoNum\TwoNum.csproj" />
+    <ProjectReference Include="..\LeetCodeDemo\LeetCodeDemo.csproj" />
   </ItemGroup>
 
 </Project>
